# slydr

./: DEPLOYMENT.md  README.md  package.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/slydr/: Cargo.toml
anchor/programs/slydr/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/admin/: page.tsx
app/careers/: page.tsx
app/cookies/: page.tsx
app/creators/: page.tsx
app/dashboard/: artist-dashboard.tsx  filmmaker-dashboard.tsx  musician-dashboard.tsx  page.tsx  podcaster-dashboard.tsx  writer-dashboard.tsx
app/docs/: page.tsx
app/faq/: page.tsx
app/guides/: page.tsx
app/learn/: page.tsx
app/learn-more/: page.tsx
app/marketplace/: page.tsx
app/privacy/: page.tsx
app/profile/: page.tsx
app/resources/: page.tsx
app/search/: page.tsx
app/settings/: page.tsx
app/support/: page.tsx
app/team/: page.tsx
app/terms/: page.tsx
app/trending/: page.tsx
components/: faq-section.tsx  featured-creators.tsx  footer.tsx  hero-section.tsx  hot-trending.tsx  how-it-works.tsx  marketplace-grid.tsx  navbar.tsx  theme-toggle.tsx  trending-content.tsx  trending-grid.tsx  wallet-connect.tsx
config/: production.ts
context/: ai-context.tsx  user-context.tsx  wallet-context.tsx
lib/: db.ts  supabaseClient.ts
programs/: slydr-program.ts
scripts/: cleanup-test-data.ts  seed-database.ts  setup-database.ts
services/: ai-service.ts  anchor-service.ts  arweave-service.ts  deepseek-provider.ts  supabase-service.ts
store/: content-store.ts
supabase/: schema.sql
types/: content.ts  supabase.ts
(+36 files in other folders)
