[package]
name = "slydr"
version = "0.1.0"
description = "Slydr - A blockchain-powered creator marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slydr"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

